Fixed Donation Bug
Added  rule to fix bug where the donation button was covering the contact info 

div#donations.sponsordonation {
   margin-bottom: 75px;
}

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -880,6 +880,9 @@ h2, h3, h4 {
 #donations form {
   margin-top: 100px;
   text-align: center; }
+div#donations.sponsordonation {
+   margin-bottom: 75px;
+}
 input#button {
   position: absolute;
   text-align: center;
